--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Ching Pong</title>
-</head>
-<body>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Ching Pong</title>
+</head>
+
+<body>
+    <h1>Bienvenue sur Ching Pong</h1>
+    <canvas id="canvas" width="640" height="480"></canvas>
+    <script src="app.js"></script>
 </body>
+
 </html>
