--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Bienvenue sur Ching Pong</h1>
-    <canvas id="canvas" width="640" height="480"></canvas>
+    <canvas id="terrain" width="640" height="480"></canvas>
     <script src="app.js"></script>
 </body>
 
