wip: ajout d'un flash lumineux non concluant

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <h1>Bienvenue sur Ching Pong</h1>
-    <canvas id="terrain" width="640" height="480"></canvas>
+    <div id="bordure">
+        <canvas id="terrain" width="640" height="480"></canvas>
+    </div>
     <script src="app.js"></script>
 </body>
 
